<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/primary">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp"
        tools:ignore="MissingConstraints">


        <TextView
            android:id="@+id/welcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="45sp"
            android:layout_marginTop="70dp"

            />

        <TextView
            android:id="@+id/welcometxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcometxt"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="50dp"/>

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="300dp"
            android:layout_height="252dp"
            android:layout_gravity="center"
            android:contentDescription="@string/todo"
            app:srcCompat="@drawable/icon" />

        <Button
            android:id="@+id/btnDriver"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/btnDriver"
            android:background="@drawable/btn_bg"
            android:layout_gravity="center"
            android:layout_marginBottom="12dp"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btnCustomer"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/btnCustomer"
            android:background="@drawable/btn_bg"
            android:layout_gravity="center"
            android:textColor="@color/white"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>