<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CustomerActivity"
    android:background="@color/primary"
    android:theme="@style/Theme.AppCompat.NoActionBar">


    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="150dp"
            android:layout_height="200dp"
            android:src="@drawable/signin"
            android:contentDescription="@string/todo"
            android:layout_gravity="center"/>


        <TextView
            android:id="@+id/signUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signUp"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="35sp"
            android:layout_marginBottom="35dp"
            />


        <EditText
            android:id="@+id/FN"
            android:layout_width="350dp"
            android:layout_height="49dp"
            android:layout_gravity="center"
            android:layout_marginBottom="15dp"
            android:autofillHints="@string/txtEmail"
            android:background="@drawable/custom_input"
            android:drawablePadding="9dp"
            android:ems="10"
            android:hint="@string/FN"
            android:inputType="textPersonName"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textColorHint="#898B8C" />

        <EditText
            android:id="@+id/LN"
            android:layout_width="350dp"
            android:layout_height="49dp"
            android:layout_gravity="center"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/txtPass"
            android:autofillHints="@string/txtPass"
            android:background="@drawable/custom_input"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textColorHint="#898B8C"
            android:layout_marginBottom="15dp"/>

        <EditText
            android:id="@+id/txtEmail"
            android:layout_width="350dp"
            android:layout_height="49dp"
            android:layout_gravity="center"
            android:layout_marginBottom="15dp"
            android:autofillHints="@string/txtEmail"
            android:background="@drawable/custom_input"
            android:drawablePadding="9dp"
            android:ems="10"
            android:hint="@string/txtEmail"
            android:inputType="textEmailAddress"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textColorHint="#898B8C" />

        <EditText
            android:id="@+id/txtPass"
            android:layout_width="350dp"
            android:layout_height="49dp"
            android:layout_gravity="center"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="@string/txtPass"
            android:autofillHints="@string/txtPass"
            android:drawablePadding="9dp"
            android:background="@drawable/custom_input"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textColorHint="#898B8C" />

        <Button
            android:id="@+id/btnSignUp2"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/signUp"
            android:background="@drawable/btn_bg"
            android:layout_marginTop="20dp"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/dontHaveAcc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hvacc"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:layout_marginTop="15dp"
            />

        <Button
            android:id="@+id/btnSignIn2"
            android:layout_width="wrap_content"
            android:layout_height="42dp"
            android:text="@string/txtSignIn"
            android:layout_gravity="center"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:textSize="16sp"/>





    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>