<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="10dp"
    app:cardCornerRadius="12dp"
    android:layout_margin="12dp"
    app:cardBackgroundColor="@color/white">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="12dp">

        <ImageView
            android:layout_width="300dp"
            android:layout_height="400dp"
            android:layout_centerHorizontal="true"
            android:id="@+id/destinationImg"
            android:contentDescription="@string/desc" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calaguas"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_below="@+id/destinationImg"
            android:layout_marginTop="6dp"
            android:layout_centerHorizontal="true"
            android:id="@+id/name"/>


        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@color/secondary"
            android:text="@string/viewDetails"
            android:textColor="@color/white"
            android:layout_centerHorizontal="true"
            android:textSize="15dp"

            />




    </RelativeLayout>

</androidx.cardview.widget.CardView>