<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawerLayout"
    android:fitsSystemWindows="true"
    android:minWidth="19dp">

    <ScrollView
        android:layout_width="wrap_content"
        android:background="#F7FFFFFF"
        android:layout_height="match_parent"
        tools:ignore="ScrollViewCount">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#F7FFFFFF"
            android:orientation="vertical">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:background="@color/primary"
                app:contentInsetLeft="0dp"
                app:contentInsetStart="0dp"
                app:contentInsetStartWithNavigation="0dp">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="80dp"
                        android:src="@drawable/awtoimg"
                        android:layout_marginEnd="230dp"
                        android:layout_marginStart="-40dp"
                        android:layout_marginRight="230dp"
                        android:layout_marginLeft="-40dp"
                        android:contentDescription="@string/desc"/>

                    <ImageView
                        android:id="@+id/awtoToolbar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/awtotxt"
                        android:layout_marginEnd="170dp"
                        android:layout_marginTop="35dp"
                        android:contentDescription="@string/desc"
                        android:layout_marginRight="170dp"
                        />

                </RelativeLayout>
            </androidx.appcompat.widget.Toolbar>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/wander"
                android:layout_width="130dp"
                android:layout_height="100dp"
                android:src="@drawable/undraw"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"
                android:contentDescription="@string/desc" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/primary"
                android:textStyle="bold"
                android:textSize="15sp"
                android:text="@string/bookingIntro"
                android:layout_alignParentRight="true"
                android:layout_toRightOf="@id/wander"
                android:layout_marginEnd="20dp"
                android:padding="10dp"
                android:layout_marginTop="20dp"
                android:layout_centerVertical="true"
                android:layout_marginRight="20dp"
                android:layout_alignParentEnd="true"
                android:layout_toEndOf="@id/wander" />

        </RelativeLayout>



            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/from"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/from"
                    android:textSize="18sp"
                    android:textColor="@color/primary"
                    android:layout_marginStart="20dp"
                    android:textStyle="bold"
                    android:layout_marginLeft="20dp" />

                <Spinner
                    android:id="@+id/spinner"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:background="@drawable/spinner_outline"
                    android:layout_marginEnd="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_below="@+id/from"

                    />

                <TextView
                    android:id="@+id/to"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/to"
                    android:textSize="18sp"
                    android:textColor="@color/primary"
                    android:layout_marginStart="20dp"
                    android:textStyle="bold"
                    android:layout_below="@+id/spinner"
                    android:layout_marginLeft="20dp" />

                <Spinner
                    android:id="@+id/spinner2"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:background="@drawable/spinner_outline"
                    android:layout_marginEnd="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_below="@+id/to"
                    />

                <TextView
                    android:id="@+id/departDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/departDate"
                    android:textSize="18sp"
                    android:textColor="@color/primary"
                    android:layout_marginStart="20dp"
                    android:textStyle="bold"
                    android:layout_below="@+id/spinner2"
                    android:layout_marginLeft="20dp"
                    />

                <EditText
                    android:id="@+id/spinner3"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:background="@drawable/spinner_outline"
                    android:layout_marginEnd="20dp"
                    android:layout_marginStart="20dp"
                    android:inputType="date"
                    android:layout_below="@+id/departDate"
                    android:autofillHints="date"
                    android:hint="@string/mmddyy"
                    android:textColor="@color/white"
                    android:padding="5dp"
                    />




                <TextView
                    android:id="@+id/departTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/departTime"
                    android:textSize="18sp"
                    android:textColor="@color/primary"
                    android:layout_marginStart="20dp"
                    android:textStyle="bold"
                    android:layout_below="@+id/spinner3"
                    android:layout_marginLeft="20dp" />

                <EditText
                    android:id="@+id/spinner4"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:background="@drawable/spinner_outline"
                    android:layout_marginEnd="20dp"
                    android:layout_marginStart="20dp"
                    android:inputType="time"
                    android:layout_below="@+id/departTime"
                    android:autofillHints="@string/time"
                    android:hint="@string/time"
                    android:textColor="@color/white"
                    android:padding="5dp"
                    />


                <Button
                    android:id="@+id/searchBtn"
                    android:layout_width="170dp"
                    android:layout_height="40dp"
                    android:text="@string/search"
                    android:background="@drawable/prcdbtn_outline"
                    android:layout_below="@id/spinner4"
                    android:layout_marginTop="50dp"
                    android:textSize="15sp"
                    android:layout_centerInParent="true"

                    />

            </RelativeLayout>



        </LinearLayout>
    </ScrollView>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigation_menu"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/header"
        app:menu="@menu/drawer_menu"
        android:background="@color/primary">
    </com.google.android.material.navigation.NavigationView>
</androidx.drawerlayout.widget.DrawerLayout>